Implemented prototype interface

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ZapsOS</string>
+    <string name="enter_text">Message</string>
+    <string name="zapsos_name">ZapsOS:</string>
 </resources>
