--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="sync_header">Sync</string>
 
     <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
+    <string name="preferred_music_service">Preferred Music Service</string>
     <string name="reply_title">Default reply action</string>
 
     <!-- Sync Preferences -->
