Renamed ZapsOS to Glitch. GlitchOS will be used as the project name and Glitch will be used as the name of the assistant. All references should be renamed, but I might have missed a few

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">ZapsOS</string>
     <string name="enter_text">Message</string>
-    <string name="zapsos_name">ZapsOS:</string>
+    <string name="glitchos_name">Glitch:</string>
     <string name="title_activity_settings">Settings</string>
 
     <!-- Preference Titles -->
