Found some more ZapsOS references

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ZapsOS</string>
+    <string name="app_name">GlitchOS</string>
     <string name="enter_text">Message</string>
     <string name="glitchos_name">Glitch:</string>
     <string name="title_activity_settings">Settings</string>
